--- a/style.css
+++ b/style.css
@@ -11,11 +11,114 @@
   box-sizing: border-box;
   font-family: 'Tajawal';
   background-color: var(--white);
+  font-weight: 400;
 }
 
 body {
   margin: 0;
-  color: var(--white);
+  padding: 0px;
 }
 
 /* HERO */
+
+.hero {
+  height: 559px;
+}
+
+.background-hero {
+  position: relative;
+  width: 100%;
+  height: 559px;
+  overflow: hidden;
+  padding: 0px;
+  margin: 0;
+}
+
+.background-hero .hero {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.hero,
+.navbar,
+.logo-mobile,
+.hamburger,
+h1,
+h2,
+.book-mobile,
+.devider {
+  position: absolute;
+}
+
+.book-mobile {
+  width: calc(100vw);
+  height: 82px;
+  background-color: var(--beige);
+  color: var(--brown);
+  padding: 0px;
+  border: none;
+  margin: 0px;
+  bottom: 0;
+  height: 82px;
+  font-size: 20px;
+}
+
+h2 {
+  font-style: italic;
+  font-weight: 300;
+  letter-spacing: 1px;
+  font-family: 'Bellota Text';
+  font-size: 16px;
+  background: transparent;
+  color: var(--white);
+  bottom: 230px;
+  padding: 0px;
+  margin: 0px;
+  left: 50%;
+  transform: translateX(-50%);
+  text-shadow: 20px 20px 70px var(--black);
+  text-align: center;
+  min-width: 250px;
+}
+
+h1 {
+  font-size: 38px;
+  font-weight: 400;
+  text-shadow: 20px 20px 70px var(--black);
+  color: var(--white);
+  margin: 0px;
+  background: transparent;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  min-width: 250px;
+  bottom: 270px;
+}
+
+.devider {
+  width: calc(100vw);
+  height: 1px;
+  background-color: var(--white);
+  margin-top: 60px;
+}
+
+.logo-mobile,
+.logo-mobile-svg,
+.hamburger,
+.hamburger-svg {
+  background: transparent;
+}
+
+.logo-mobile {
+  top: 12px;
+  left: 20px;
+}
+
+.hamburger {
+  top: 22.5px;
+  right: 60px;
+}
